samples/_failures_safe/1761300266_7223fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52d956d4.c: In function ‘print_matrix’:
./samples/SAFE/__tmp_52d956d4.c:135:20: error: missing terminating " character
  135 |             printf("%8
      |                    ^~~
./samples/SAFE/__tmp_52d956d4.c:135:13: error: expected expression at end of input
  135 |             printf("%8
      |             ^~~~~~
./samples/SAFE/__tmp_52d956d4.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52d956d4.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52d956d4.c:135:13: error: expected declaration or statement at end of input
